@@ -7,6 +7,9 @@
   [Changes]
     * $type argument of Net::SSLeay::SSL_CTX#use_certificate_file method becomes optional.
     * $type argument of Net::SSLeay::SSL_CTX#use_PrivateKey_file method becomes optional.
+  [New Features]
+    * Add SSL_ERROR_WANT_WRITE class.
+    * Add SSL_ERROR_WANT_READ class.
     
 0.027 2024-12-12
   [New Features]
